--- a/web/example/dist-golden/index.html
+++ b/web/example/dist-golden/index.html
@@ -27,7 +27,7 @@
 			<h1>Hello world!</h1>
 			<div id="jump1">Jump 1</div>
 			<ol data-component="ListComponent" id="/UID/">
-				<li><button type="button" onclick="this.closest('[data-component=ListComponent]').instance.addListItem(event,)">Add</button></li>
+				<li> <button type="button" onclick="this.closest('[data-component=ListComponent]').instance.onAdd(event,)">Add</button></li>
 			</ol>
 			<h1>Headline 1</h1>
 			<h2>This is a variable</h2>
