--- a/web/example/dist-golden/index.html
+++ b/web/example/dist-golden/index.html
@@ -26,7 +26,7 @@
 		<div data-component="IndexPage" id="/UID/">
 			<h1>Hello world!</h1>
 			<div id="jump1">Jump 1</div>
-			<ol data-component="ListComponent" id="/UID/"> </ol>
+			<ol data-component="List" id="/UID/"> </ol>
 			<h1>Headline 1</h1>
 			<h2>This is a variable</h2>
 			<p>Lorem ipsum dolor <strong>sit amet</strong>, consectetur <em>adipiscing elit</em>, sed do <em>eiusmod tempor</em> incididunt.</p>
