id attr only if specified

--- a/web/example/dist-golden/ssg/yes/index.html
+++ b/web/example/dist-golden/ssg/yes/index.html
@@ -6,24 +6,24 @@
 	<base href="/">
 	<meta name="viewport" content="width=device-width, initial-scale=1"> <script src="/script.js" type="module"></script>
 	<link rel="stylesheet" href="/styles.css">
-	<link rel="stylesheet" href="/ssg/yes/index.html.css"> <script>window.ssgInstances=window.ssgInstances||[];</script>
+	<link rel="stylesheet" href="/ssg/yes/index.html.css">
 </head>
 
 <body>
 	<nav>
 		<ul>
-			<li><a data-component="AppRouteComponent" id="/UID/" href="/404.html" onclick="this.closest('[data-component=AppRouteComponent]').instance.onClick(event,)">Go error404</a></li>
-			<li><a data-component="AppRouteComponent" id="/UID/" href="/" onclick="this.closest('[data-component=AppRouteComponent]').instance.onClick(event,)">Go home</a></li>
-			<li><a data-component="AppRouteComponent" id="/UID/" href="/#jump1" onclick="this.closest('[data-component=AppRouteComponent]').instance.onClick(event,)">Go homeJump1</a></li>
-			<li><a data-component="AppRouteComponent" id="/UID/" href="/#jump2" onclick="this.closest('[data-component=AppRouteComponent]').instance.onClick(event,)">Go homeJump2</a></li>
-			<li><a data-component="AppRouteComponent" id="/UID/" href="/ssg/no" onclick="this.closest('[data-component=AppRouteComponent]').instance.onClick(event,)">Go ssgNo</a></li>
-			<li><a data-component="AppRouteComponent" id="/UID/" href="/ssg/yes" onclick="this.closest('[data-component=AppRouteComponent]').instance.onClick(event,)">Go ssgYes</a></li>
-			<li><a data-component="AppRouteComponent" id="/UID/" href="/ssg/yes/#jump1" onclick="this.closest('[data-component=AppRouteComponent]').instance.onClick(event,)">Go ssgYesJump1</a></li>
-			<li><a data-component="AppRouteComponent" id="/UID/" href="/ssg/yes/#jump2" onclick="this.closest('[data-component=AppRouteComponent]').instance.onClick(event,)">Go ssgYesJump2</a></li>
+			<li><a data-component="AppRouteComponent" href="/404.html" onclick="this.closest('[data-component=AppRouteComponent]').instance.onClick(event,)">Go error404</a></li>
+			<li><a data-component="AppRouteComponent" href="/" onclick="this.closest('[data-component=AppRouteComponent]').instance.onClick(event,)">Go home</a></li>
+			<li><a data-component="AppRouteComponent" href="/#jump1" onclick="this.closest('[data-component=AppRouteComponent]').instance.onClick(event,)">Go homeJump1</a></li>
+			<li><a data-component="AppRouteComponent" href="/#jump2" onclick="this.closest('[data-component=AppRouteComponent]').instance.onClick(event,)">Go homeJump2</a></li>
+			<li><a data-component="AppRouteComponent" href="/ssg/no" onclick="this.closest('[data-component=AppRouteComponent]').instance.onClick(event,)">Go ssgNo</a></li>
+			<li><a data-component="AppRouteComponent" href="/ssg/yes" onclick="this.closest('[data-component=AppRouteComponent]').instance.onClick(event,)">Go ssgYes</a></li>
+			<li><a data-component="AppRouteComponent" href="/ssg/yes/#jump1" onclick="this.closest('[data-component=AppRouteComponent]').instance.onClick(event,)">Go ssgYesJump1</a></li>
+			<li><a data-component="AppRouteComponent" href="/ssg/yes/#jump2" onclick="this.closest('[data-component=AppRouteComponent]').instance.onClick(event,)">Go ssgYesJump2</a></li>
 		</ul>
 	</nav>
 	<main>
-		<div data-component="YesSSGPage" id="/UID/">
+		<div data-component="YesSSGPage">
 			<h1>SSG yes</h1>
 			<div id="jump1">Jump 1</div>
 			<div id="jump2">Jump 2</div>
