--- a/web/example/dist-golden/ssg/yes/index.html
+++ b/web/example/dist-golden/ssg/yes/index.html
@@ -12,14 +12,14 @@
 <body>
 	<nav>
 		<ul>
-			<li><a data-component="AppRouteComponent" href="/404.html" onclick="this.closest('[data-component=AppRouteComponent]').instance.onClick(event,)">Go error404</a></li>
-			<li><a data-component="AppRouteComponent" href="/" onclick="this.closest('[data-component=AppRouteComponent]').instance.onClick(event,)">Go home</a></li>
-			<li><a data-component="AppRouteComponent" href="/#jump1" onclick="this.closest('[data-component=AppRouteComponent]').instance.onClick(event,)">Go homeJump1</a></li>
-			<li><a data-component="AppRouteComponent" href="/#jump2" onclick="this.closest('[data-component=AppRouteComponent]').instance.onClick(event,)">Go homeJump2</a></li>
-			<li><a data-component="AppRouteComponent" href="/ssg/no" onclick="this.closest('[data-component=AppRouteComponent]').instance.onClick(event,)">Go ssgNo</a></li>
-			<li><a data-component="AppRouteComponent" href="/ssg/yes" onclick="this.closest('[data-component=AppRouteComponent]').instance.onClick(event,)">Go ssgYes</a></li>
-			<li><a data-component="AppRouteComponent" href="/ssg/yes/#jump1" onclick="this.closest('[data-component=AppRouteComponent]').instance.onClick(event,)">Go ssgYesJump1</a></li>
-			<li><a data-component="AppRouteComponent" href="/ssg/yes/#jump2" onclick="this.closest('[data-component=AppRouteComponent]').instance.onClick(event,)">Go ssgYesJump2</a></li>
+			<li><a data-component="RouteTo" href="/404.html" onclick="this.closest('[data-component=RouteTo]').instance.onClick(event,)">Go error404</a></li>
+			<li><a data-component="RouteTo" href="/" onclick="this.closest('[data-component=RouteTo]').instance.onClick(event,)">Go home</a></li>
+			<li><a data-component="RouteTo" href="/" onclick="this.closest('[data-component=RouteTo]').instance.onClick(event,)">Go homeJump1</a></li>
+			<li><a data-component="RouteTo" href="/" onclick="this.closest('[data-component=RouteTo]').instance.onClick(event,)">Go homeJump2</a></li>
+			<li><a data-component="RouteTo" href="/ssg/no" onclick="this.closest('[data-component=RouteTo]').instance.onClick(event,)">Go ssgNo</a></li>
+			<li><a data-component="RouteTo" href="/ssg/yes" onclick="this.closest('[data-component=RouteTo]').instance.onClick(event,)">Go ssgYes</a></li>
+			<li><a data-component="RouteTo" href="/ssg/yes/" onclick="this.closest('[data-component=RouteTo]').instance.onClick(event,)">Go ssgYesJump1</a></li>
+			<li><a data-component="RouteTo" href="/ssg/yes/" onclick="this.closest('[data-component=RouteTo]').instance.onClick(event,)">Go ssgYesJump2</a></li>
 		</ul>
 	</nav>
 	<main>
