--- a/web/example/dist-golden/index.html
+++ b/web/example/dist-golden/index.html
@@ -12,26 +12,25 @@
 <body>
 	<nav>
 		<ul>
-			<li><a data-component="AppRouteComponent" href="/404.html" onclick="this.closest('[data-component=AppRouteComponent]').instance.onClick(event,)">Go error404</a></li>
-			<li><a data-component="AppRouteComponent" href="/" onclick="this.closest('[data-component=AppRouteComponent]').instance.onClick(event,)">Go home</a></li>
-			<li><a data-component="AppRouteComponent" href="/#jump1" onclick="this.closest('[data-component=AppRouteComponent]').instance.onClick(event,)">Go homeJump1</a></li>
-			<li><a data-component="AppRouteComponent" href="/#jump2" onclick="this.closest('[data-component=AppRouteComponent]').instance.onClick(event,)">Go homeJump2</a></li>
-			<li><a data-component="AppRouteComponent" href="/ssg/no" onclick="this.closest('[data-component=AppRouteComponent]').instance.onClick(event,)">Go ssgNo</a></li>
-			<li><a data-component="AppRouteComponent" href="/ssg/yes" onclick="this.closest('[data-component=AppRouteComponent]').instance.onClick(event,)">Go ssgYes</a></li>
-			<li><a data-component="AppRouteComponent" href="/ssg/yes/#jump1" onclick="this.closest('[data-component=AppRouteComponent]').instance.onClick(event,)">Go ssgYesJump1</a></li>
-			<li><a data-component="AppRouteComponent" href="/ssg/yes/#jump2" onclick="this.closest('[data-component=AppRouteComponent]').instance.onClick(event,)">Go ssgYesJump2</a></li>
+			<li><a data-component="RouteTo" href="/404.html" onclick="this.closest('[data-component=RouteTo]').instance.onClick(event,)">Go error404</a></li>
+			<li><a data-component="RouteTo" href="/" onclick="this.closest('[data-component=RouteTo]').instance.onClick(event,)">Go home</a></li>
+			<li><a data-component="RouteTo" href="/" onclick="this.closest('[data-component=RouteTo]').instance.onClick(event,)">Go homeJump1</a></li>
+			<li><a data-component="RouteTo" href="/" onclick="this.closest('[data-component=RouteTo]').instance.onClick(event,)">Go homeJump2</a></li>
+			<li><a data-component="RouteTo" href="/ssg/no" onclick="this.closest('[data-component=RouteTo]').instance.onClick(event,)">Go ssgNo</a></li>
+			<li><a data-component="RouteTo" href="/ssg/yes" onclick="this.closest('[data-component=RouteTo]').instance.onClick(event,)">Go ssgYes</a></li>
+			<li><a data-component="RouteTo" href="/ssg/yes/" onclick="this.closest('[data-component=RouteTo]').instance.onClick(event,)">Go ssgYesJump1</a></li>
+			<li><a data-component="RouteTo" href="/ssg/yes/" onclick="this.closest('[data-component=RouteTo]').instance.onClick(event,)">Go ssgYesJump2</a></li>
 		</ul>
 	</nav>
 	<main>
 		<div data-component="IndexPage">
 			<h1>Hello world!</h1>
 			<div id="jump1">Jump 1</div>
-			<ol data-component="List" id="steve"> </ol>
 			<h1>Headline 1</h1>
 			<h2>This is a variable</h2>
 			<p>Lorem ipsum dolor <strong>sit amet</strong>, consectetur <em>adipiscing elit</em>, sed do <em>eiusmod tempor</em> incididunt.</p>
 			<p>Duis aute voluptate <a href="https://example.com">velit esse cillum</a> dolore /eu fugiat/ nulla pariatur.</p>
-			<p><a data-component="AppRouteComponent" href="/" onclick="this.closest('[data-component=AppRouteComponent]').instance.onClick(event,)">Link to homepage</a></p><button type="button" onclick="this.closest('[data-component=IndexPage]').instance.anchorlessRoute(event,)">Go to SSG Yes</button>
+			<p><a data-component="RouteTo" href="/" onclick="this.closest('[data-component=RouteTo]').instance.onClick(event,)">Link to homepage</a></p><button type="button" onclick="this.closest('[data-component=IndexPage]').instance.anchorlessRoute(event,)">Go to SSG Yes</button>
 			<h2>Headline 2</h2>
 			<blockquote>
 				<p>Excepteur sint occaecat <em>cupidatat</em> non proident.</p>
