--- a/web/example/dist-golden/404.html
+++ b/web/example/dist-golden/404.html
@@ -10,21 +10,21 @@
 
 <body>
 	<nav>
-		<ul>
-			<li><a data-component="RouteTo" href="/404.html" onclick="this.closest('[data-component=RouteTo]').instance.onClick(event,)">Go error404</a></li>
-			<li><a data-component="RouteTo" href="/" onclick="this.closest('[data-component=RouteTo]').instance.onClick(event,)">Go home</a></li>
-			<li><a data-component="RouteTo" href="/" onclick="this.closest('[data-component=RouteTo]').instance.onClick(event,)">Go homeJump1</a></li>
-			<li><a data-component="RouteTo" href="/" onclick="this.closest('[data-component=RouteTo]').instance.onClick(event,)">Go homeJump2</a></li>
-			<li><a data-component="RouteTo" href="/ssg/no" onclick="this.closest('[data-component=RouteTo]').instance.onClick(event,)">Go ssgNo</a></li>
-			<li><a data-component="RouteTo" href="/ssg/yes" onclick="this.closest('[data-component=RouteTo]').instance.onClick(event,)">Go ssgYes</a></li>
-			<li><a data-component="RouteTo" href="/ssg/yes/" onclick="this.closest('[data-component=RouteTo]').instance.onClick(event,)">Go ssgYesJump1</a></li>
-			<li><a data-component="RouteTo" href="/ssg/yes/" onclick="this.closest('[data-component=RouteTo]').instance.onClick(event,)">Go ssgYesJump2</a></li>
+		<ul data-component="Nav" data-id="/UID/">
+			<li><a href="/404.html" onclick="this.closest('[data-component=Link]').instance.onClick(event,)" data-component="Link" data-id="/UID/_0">Go error404</a></li>
+			<li><a href="/" onclick="this.closest('[data-component=Link]').instance.onClick(event,)" data-component="Link" data-id="/UID/_1">Go home</a></li>
+			<li><a href="/#jump1" onclick="this.closest('[data-component=Link]').instance.onClick(event,)" data-component="Link" data-id="/UID/_2">Go homeJump1</a></li>
+			<li><a href="/#jump2" onclick="this.closest('[data-component=Link]').instance.onClick(event,)" data-component="Link" data-id="/UID/_3">Go homeJump2</a></li>
+			<li><a href="/ssg/no" onclick="this.closest('[data-component=Link]').instance.onClick(event,)" data-component="Link" data-id="/UID/_4">Go ssgNo</a></li>
+			<li><a href="/ssg/yes" onclick="this.closest('[data-component=Link]').instance.onClick(event,)" data-component="Link" data-id="/UID/_5">Go ssgYes</a></li>
+			<li><a href="/ssg/yes/#jump1" onclick="this.closest('[data-component=Link]').instance.onClick(event,)" data-component="Link" data-id="/UID/_6">Go ssgYesJump1</a></li>
+			<li><a href="/ssg/yes/#jump2" onclick="this.closest('[data-component=Link]').instance.onClick(event,)" data-component="Link" data-id="/UID/_7">Go ssgYesJump2</a></li>
 		</ul>
 	</nav>
 	<main>
-		<div data-component="ErrorPage">
+		<div data-component="ErrorPage" data-id="/UID/">
 			<h1>404 page :(</h1>
-		</div>
+		</div><script id="unhydratedArgs" src="data:text/javascript," onload="unhydratedArgs={'/UID/':{'title':'Error 404',},'/UID/_0':{'idAttr':'','isExternal':false,},'/UID/_1':{'idAttr':'','isExternal':false,},'/UID/_2':{'idAttr':'jump1','isExternal':false,},'/UID/_3':{'idAttr':'jump2','isExternal':false,},'/UID/_4':{'idAttr':'','isExternal':false,},'/UID/_5':{'idAttr':'','isExternal':false,},'/UID/_6':{'idAttr':'jump1','isExternal':false,},'/UID/_7':{'idAttr':'jump2','isExternal':false,},}"></script>
 	</main>
 </body>
 
