--- a/web/example/dist-golden/index.html
+++ b/web/example/dist-golden/index.html
@@ -11,31 +11,38 @@
 
 <body>
 	<nav>
-		<ul>
-			<li><a data-component="RouteTo" href="/404.html" onclick="this.closest('[data-component=RouteTo]').instance.onClick(event,)">Go error404</a></li>
-			<li><a data-component="RouteTo" href="/" onclick="this.closest('[data-component=RouteTo]').instance.onClick(event,)">Go home</a></li>
-			<li><a data-component="RouteTo" href="/" onclick="this.closest('[data-component=RouteTo]').instance.onClick(event,)">Go homeJump1</a></li>
-			<li><a data-component="RouteTo" href="/" onclick="this.closest('[data-component=RouteTo]').instance.onClick(event,)">Go homeJump2</a></li>
-			<li><a data-component="RouteTo" href="/ssg/no" onclick="this.closest('[data-component=RouteTo]').instance.onClick(event,)">Go ssgNo</a></li>
-			<li><a data-component="RouteTo" href="/ssg/yes" onclick="this.closest('[data-component=RouteTo]').instance.onClick(event,)">Go ssgYes</a></li>
-			<li><a data-component="RouteTo" href="/ssg/yes/" onclick="this.closest('[data-component=RouteTo]').instance.onClick(event,)">Go ssgYesJump1</a></li>
-			<li><a data-component="RouteTo" href="/ssg/yes/" onclick="this.closest('[data-component=RouteTo]').instance.onClick(event,)">Go ssgYesJump2</a></li>
+		<ul data-component="Nav" data-id="/UID/">
+			<li><a href="/404.html" onclick="this.closest('[data-component=Link]').instance.onClick(event,)" data-component="Link" data-id="/UID/_0">Go error404</a></li>
+			<li><a href="/" onclick="this.closest('[data-component=Link]').instance.onClick(event,)" data-component="Link" data-id="/UID/_1">Go home</a></li>
+			<li><a href="/#jump1" onclick="this.closest('[data-component=Link]').instance.onClick(event,)" data-component="Link" data-id="/UID/_2">Go homeJump1</a></li>
+			<li><a href="/#jump2" onclick="this.closest('[data-component=Link]').instance.onClick(event,)" data-component="Link" data-id="/UID/_3">Go homeJump2</a></li>
+			<li><a href="/ssg/no" onclick="this.closest('[data-component=Link]').instance.onClick(event,)" data-component="Link" data-id="/UID/_4">Go ssgNo</a></li>
+			<li><a href="/ssg/yes" onclick="this.closest('[data-component=Link]').instance.onClick(event,)" data-component="Link" data-id="/UID/_5">Go ssgYes</a></li>
+			<li><a href="/ssg/yes/#jump1" onclick="this.closest('[data-component=Link]').instance.onClick(event,)" data-component="Link" data-id="/UID/_6">Go ssgYesJump1</a></li>
+			<li><a href="/ssg/yes/#jump2" onclick="this.closest('[data-component=Link]').instance.onClick(event,)" data-component="Link" data-id="/UID/_7">Go ssgYesJump2</a></li>
 		</ul>
 	</nav>
 	<main>
-		<div data-component="IndexPage">
+		<div data-component="IndexPage" data-id="/UID/">
 			<h1>Hello world!</h1>
 			<div id="jump1">Jump 1</div>
+			<ol data-component="List" data-id="mylist">
+				<li>
+					<div data-component="ListItem" data-id="mylist-/UID/"> mylist-/UID/ <button type="button">↑</button> <button type="button">↓</button> <button type="button">Add before</button> <button type="button">Remove</button>
+						<div data-component="Textbox" data-id="mylist-/UID/_0"> <input maxlength="10" oninput="this.closest('[data-component=Textbox]').instance.handleInput(event,)" placeholder="Type here" type="text" value="hello"> <span>5 / 10 Remaining</span> </div>
+					</div>
+				</li>
+			</ol>
 			<h1>Headline 1</h1>
 			<h2>This is a variable</h2>
 			<p>Lorem ipsum dolor <strong>sit amet</strong>, consectetur <em>adipiscing elit</em>, sed do <em>eiusmod tempor</em> incididunt.</p>
 			<p>Duis aute voluptate <a href="https://example.com">velit esse cillum</a> dolore /eu fugiat/ nulla pariatur.</p>
-			<p><a data-component="RouteTo" href="/" onclick="this.closest('[data-component=RouteTo]').instance.onClick(event,)">Link to homepage</a></p><button type="button" onclick="this.closest('[data-component=IndexPage]').instance.anchorlessRoute(event,)">Go to SSG Yes</button>
+			<p><a href="/" onclick="this.closest('[data-component=Link]').instance.onClick(event,)" data-component="Link" data-id="/UID/_0">Link to homepage</a></p><button type="button" onclick="this.closest('[data-component=IndexPage]').instance.anchorlessRoute(event,)">Go to SSG Yes</button>
 			<h2>Headline 2</h2>
 			<blockquote>
 				<p>Excepteur sint occaecat <em>cupidatat</em> non proident.</p>
 			</blockquote>
-			<p>Joseph&#39;s coat was red and yellow and green and brown and scarlet.</p>
+			<p>Joseph's coat was red and yellow and green and brown and scarlet.</p>
 			<ul>
 				<li> ut aliquip ex</li>
 				<li> ea commodo consequat.<ul>
@@ -55,7 +62,7 @@
 				<li> ut aliquip ex</li>
 			</ol>
 			<div id="jump2">Jump 2</div>
-		</div>
+		</div><script id="unhydratedArgs" src="data:text/javascript," onload="unhydratedArgs={'/UID/':{'message':'This is a variable','title':'Home page',},'mylist':{'items':[{'value':'hello','id':'/UID/',}],},'mylist-/UID/':{'value':'hello',},'mylist-/UID/_0':{'value':'hello',},'/UID/_0':{'idAttr':'','isExternal':false,},'/UID/_1':{'idAttr':'','isExternal':false,},'/UID/_2':{'idAttr':'jump1','isExternal':false,},'/UID/_3':{'idAttr':'jump2','isExternal':false,},'/UID/_4':{'idAttr':'','isExternal':false,},'/UID/_5':{'idAttr':'','isExternal':false,},'/UID/_6':{'idAttr':'jump1','isExternal':false,},'/UID/_7':{'idAttr':'jump2','isExternal':false,},}"></script>
 	</main>
 </body>
 
