Fix serialization weirdness

--- a/web/example/dist-golden/index.html
+++ b/web/example/dist-golden/index.html
@@ -28,8 +28,8 @@
 			<div id="jump1">Jump 1</div>
 			<ol data-component="List" data-id="mylist">
 				<li>
-					<div data-component="ListItem" data-id="mylist-/UID/"> mylist-/UID/ <button type="button">↑</button> <button type="button">↓</button> <button type="button">Add before</button> <button type="button">Remove</button>
-						<div data-component="Textbox" data-id="mylist-/UID/_0"> <input maxlength="10" oninput="this.closest('[data-component=Textbox]').instance.handleInput(event,)" placeholder="Type here" type="text" value="hello"> <span>5 / 10 Remaining</span> </div>
+					<div data-component="ListItem" data-id="mylist-0"> mylist-0 <button type="button">↑</button> <button type="button">↓</button> <button type="button">Add before</button> <button type="button">Remove</button>
+						<div data-component="Textbox" data-id="mylist-0_0"> <input maxlength="10" oninput="this.closest('[data-component=Textbox]').instance.handleInput(event,)" placeholder="Type here" type="text" value="hello"> <span>5 / 10 Remaining</span> </div>
 					</div>
 				</li>
 			</ol>
@@ -62,7 +62,7 @@
 				<li> ut aliquip ex</li>
 			</ol>
 			<div id="jump2">Jump 2</div>
-		</div><script id="unhydratedArgs" src="data:text/javascript," onload="unhydratedArgs={'/UID/':{'message':'This is a variable','title':'Home page',},'mylist':{'items':[{'value':'hello','id':'/UID/',}],},'mylist-/UID/':{'value':'hello',},'mylist-/UID/_0':{'value':'hello',},'/UID/_0':{'idAttr':'','isExternal':false,},'/UID/_1':{'idAttr':'','isExternal':false,},'/UID/_2':{'idAttr':'jump1','isExternal':false,},'/UID/_3':{'idAttr':'jump2','isExternal':false,},'/UID/_4':{'idAttr':'','isExternal':false,},'/UID/_5':{'idAttr':'','isExternal':false,},'/UID/_6':{'idAttr':'jump1','isExternal':false,},'/UID/_7':{'idAttr':'jump2','isExternal':false,},}"></script>
+		</div><script id="unhydratedArgs" src="data:text/javascript," onload="unhydratedArgs={'/UID/':{'message':'This is a variable','title':'Home page',},'mylist':[{'value':'hello',}],'mylist-0':'hello','mylist-0_0':{'value':'hello',},'/UID/_0':{'idAttr':'','isExternal':false,},'/UID/_1':{'idAttr':'','isExternal':false,},'/UID/_2':{'idAttr':'jump1','isExternal':false,},'/UID/_3':{'idAttr':'jump2','isExternal':false,},'/UID/_4':{'idAttr':'','isExternal':false,},'/UID/_5':{'idAttr':'','isExternal':false,},'/UID/_6':{'idAttr':'jump1','isExternal':false,},'/UID/_7':{'idAttr':'jump2','isExternal':false,},}"></script>
 	</main>
 </body>
 
