Revert "Rm formattssource"
This reverts commit c3a4a772ea7d10be2fc40be348cbd8c94421abbf.

--- a/web/example/dist-golden/index.html
+++ b/web/example/dist-golden/index.html
@@ -39,8 +39,10 @@
 			<p>Duis aute voluptate <a href="https://example.com">velit esse cillum</a> dolore /eu fugiat/ nulla pariatur.</p>
 			<p><a href="/" onclick="this.closest('[data-component=Link]').instance.onClick(event,)" data-component="Link" data-id="/UID/_0">Link to homepage</a></p><button type="button" onclick="this.closest('[data-component=IndexPage]').instance.anchorlessRoute(event,)">Go to SSG Yes</button>
 			<h2>Headline 2</h2>
-			<p>&gt; Excepteur sint occaecat <em>cupidatat</em> non proident.</p>
-			<p>Joseph&#39;s coat was red and yellow and green and brown and scarlet.</p>
+			<blockquote>
+				<p>Excepteur sint occaecat <em>cupidatat</em> non proident.</p>
+			</blockquote>
+			<p>Joseph's coat was red and yellow and green and brown and scarlet.</p>
 			<ul>
 				<li> ut aliquip ex</li>
 				<li> ea commodo consequat.<ul>
