Add <style> tags back in

--- a/web/example/dist-golden/ssg/yes/index.html
+++ b/web/example/dist-golden/ssg/yes/index.html
@@ -7,6 +7,9 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1"> <script src="/script.js" type="module"></script>
 	<link rel="stylesheet" href="/styles.css">
 	<link rel="stylesheet" href="/ssg/yes/index.html.css">
+	<style data-component="YesSSGPage"></style>
+	<style data-component="Nav"></style>
+	<style data-component="Link"></style>
 </head>
 
 <body>
