--- a/web/example/dist-golden/404.html
+++ b/web/example/dist-golden/404.html
@@ -6,6 +6,9 @@
 	<base href="/">
 	<meta name="viewport" content="width=device-width, initial-scale=1"> <script src="/script.js" type="module"></script>
 	<link rel="stylesheet" href="/styles.css">
+	<style data-component="ErrorPage"></style>
+	<style data-component="Nav"></style>
+	<style data-component="Link"></style>
 </head>
 
 <body>
