--- a/web/example/dist-golden/index.html
+++ b/web/example/dist-golden/index.html
@@ -7,6 +7,12 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1"> <script src="/script.js" type="module"></script>
 	<link rel="stylesheet" href="/styles.css">
 	<link rel="stylesheet" href="/index.html.css">
+	<style data-component="IndexPage"></style>
+	<style data-component="List"></style>
+	<style data-component="ListItem"></style>
+	<style data-component="Textbox"></style>
+	<style data-component="Link"></style>
+	<style data-component="Nav"></style>
 </head>
 
 <body>
