--- a/web/example/dist-golden/404.html
+++ b/web/example/dist-golden/404.html
@@ -18,8 +18,8 @@
 			<li><a href="/" onclick="this.closest('[data-component=Link]').instance.onClick(event,)" data-component="Link" data-id="/UID/_1">Go home</a></li>
 			<li><a href="/#jump1" onclick="this.closest('[data-component=Link]').instance.onClick(event,)" data-component="Link" data-id="/UID/_2">Go homeJump1</a></li>
 			<li><a href="/#jump2" onclick="this.closest('[data-component=Link]').instance.onClick(event,)" data-component="Link" data-id="/UID/_3">Go homeJump2</a></li>
-			<li><a href="/ssg/no" onclick="this.closest('[data-component=Link]').instance.onClick(event,)" data-component="Link" data-id="/UID/_4">Go ssgNo</a></li>
-			<li><a href="/ssg/yes" onclick="this.closest('[data-component=Link]').instance.onClick(event,)" data-component="Link" data-id="/UID/_5">Go ssgYes</a></li>
+			<li><a href="/ssg/no/" onclick="this.closest('[data-component=Link]').instance.onClick(event,)" data-component="Link" data-id="/UID/_4">Go ssgNo</a></li>
+			<li><a href="/ssg/yes/" onclick="this.closest('[data-component=Link]').instance.onClick(event,)" data-component="Link" data-id="/UID/_5">Go ssgYes</a></li>
 			<li><a href="/ssg/yes/#jump1" onclick="this.closest('[data-component=Link]').instance.onClick(event,)" data-component="Link" data-id="/UID/_6">Go ssgYesJump1</a></li>
 			<li><a href="/ssg/yes/#jump2" onclick="this.closest('[data-component=Link]').instance.onClick(event,)" data-component="Link" data-id="/UID/_7">Go ssgYesJump2</a></li>
 		</ul>
