Handle undefined in serialize

--- a/web/example/dist-golden/index.html
+++ b/web/example/dist-golden/index.html
@@ -68,7 +68,7 @@
 				<li> ut aliquip ex</li>
 			</ol>
 			<div id="jump2">Jump 2</div>
-		</div><script id="unhydratedArgs" src="data:text/javascript," onload="unhydratedArgs={'/UID/':{'message':'This is a variable','title':'Home page',},'mylist':[{'value':'hello',}],'mylist-0':'hello','mylist-0_0':{'value':'hello',},'/UID/_0':{'idAttr':'','isExternal':false,},'/UID/_1':{'idAttr':'','isExternal':false,},'/UID/_2':{'idAttr':'jump1','isExternal':false,},'/UID/_3':{'idAttr':'jump2','isExternal':false,},'/UID/_4':{'idAttr':'','isExternal':false,},'/UID/_5':{'idAttr':'','isExternal':false,},'/UID/_6':{'idAttr':'jump1','isExternal':false,},'/UID/_7':{'idAttr':'jump2','isExternal':false,},}"></script>
+		</div><script id="unhydratedArgs" src="data:text/javascript," onload="unhydratedArgs={'/UID/':{message:'This is a variable',title:'Home page'},mylist:[{value:'hello'}],'mylist-0':'hello','mylist-0_0':{value:'hello'},'/UID/_0':{idAttr:'',isExternal:false},'/UID/_1':{idAttr:'',isExternal:false},'/UID/_2':{idAttr:'jump1',isExternal:false},'/UID/_3':{idAttr:'jump2',isExternal:false},'/UID/_4':{idAttr:'',isExternal:false},'/UID/_5':{idAttr:'',isExternal:false},'/UID/_6':{idAttr:'jump1',isExternal:false},'/UID/_7':{idAttr:'jump2',isExternal:false},}"></script>
 	</main>
 </body>
 
