--- a/web/example/dist-golden/404.html
+++ b/web/example/dist-golden/404.html
@@ -27,7 +27,7 @@
 	<main>
 		<div data-component="ErrorPage" data-id="/UID/">
 			<h1>404 page :(</h1>
-		</div><script id="unhydratedArgs" src="data:text/javascript," onload="unhydratedArgs={'/UID/':{'title':'Error 404',},'/UID/_0':{'idAttr':'','isExternal':false,},'/UID/_1':{'idAttr':'','isExternal':false,},'/UID/_2':{'idAttr':'jump1','isExternal':false,},'/UID/_3':{'idAttr':'jump2','isExternal':false,},'/UID/_4':{'idAttr':'','isExternal':false,},'/UID/_5':{'idAttr':'','isExternal':false,},'/UID/_6':{'idAttr':'jump1','isExternal':false,},'/UID/_7':{'idAttr':'jump2','isExternal':false,},}"></script>
+		</div><script id="unhydratedArgs" src="data:text/javascript," onload="unhydratedArgs={'/UID/':{title:'Error 404'},'/UID/_0':{idAttr:'',isExternal:false},'/UID/_1':{idAttr:'',isExternal:false},'/UID/_2':{idAttr:'jump1',isExternal:false},'/UID/_3':{idAttr:'jump2',isExternal:false},'/UID/_4':{idAttr:'',isExternal:false},'/UID/_5':{idAttr:'',isExternal:false},'/UID/_6':{idAttr:'jump1',isExternal:false},'/UID/_7':{idAttr:'jump2',isExternal:false},}"></script>
 	</main>
 </body>
 
