Fix property quoting in serialize

--- a/web/example/dist-golden/ssg/yes/index.html
+++ b/web/example/dist-golden/ssg/yes/index.html
@@ -30,7 +30,7 @@
 			<h1>SSG yes</h1>
 			<div id="jump1">Jump 1</div>
 			<div id="jump2">Jump 2</div>
-		</div><script id="unhydratedArgs" src="data:text/javascript," onload="unhydratedArgs={'/UID/':{title:'SSG yes'},'/UID/_0':{idAttr:'',isExternal:false},'/UID/_1':{idAttr:'',isExternal:false},'/UID/_2':{idAttr:'jump1',isExternal:false},'/UID/_3':{idAttr:'jump2',isExternal:false},'/UID/_4':{idAttr:'',isExternal:false},'/UID/_5':{idAttr:'',isExternal:false},'/UID/_6':{idAttr:'jump1',isExternal:false},'/UID/_7':{idAttr:'jump2',isExternal:false},}"></script>
+		</div><script id="unhydratedArgs" src="data:text/javascript," onload="unhydratedArgs={'/UID/':{title:'SSG yes'},'/UID/_0':{idAttr:'',isExternal:false},'/UID/_1':{idAttr:'',isExternal:false},'/UID/_2':{idAttr:'jump1',isExternal:false},'/UID/_3':{idAttr:'jump2',isExternal:false},'/UID/_4':{idAttr:'',isExternal:false},'/UID/_5':{idAttr:'',isExternal:false},'/UID/_6':{idAttr:'jump1',isExternal:false},'/UID/_7':{idAttr:'jump2',isExternal:false}}"></script>
 	</main>
 </body>
 
