Extract out page layout

--- a/example/dist-golden/ssg/yes/index.html
+++ b/example/dist-golden/ssg/yes/index.html
@@ -5,32 +5,30 @@
 	<title>SSG yes</title>
 	<base href="/">
 	<meta name="viewport" content="width=device-width, initial-scale=1"> <script src="/script.js" type="module"></script>
-	<link rel="stylesheet" href="/styles.css">
+	<link rel="stylesheet" href="/styles.css"> <script id="unhydratedArgs" src="data:text/javascript," onload="unhydratedArgs={'/UID5/':{title:'SSG yes'},nav_0:{idAttr:'',isExternal:false},nav_1:{idAttr:'',isExternal:false},nav_2:{idAttr:'jump1',isExternal:false},nav_3:{idAttr:'jump2',isExternal:false},nav_4:{idAttr:'',isExternal:false},nav_5:{idAttr:'',isExternal:false},nav_6:{idAttr:'jump1',isExternal:false},nav_7:{idAttr:'jump2',isExternal:false}}"></script>
 	<link rel="stylesheet" href="/ssg/yes/index.html.css">
 	<style data-component="YesSSGPage"></style>
 	<style data-component="Nav"></style>
 	<style data-component="Link"></style>
 </head>
 
-<body>
-	<nav>
-		<ul data-component="Nav" data-id="/UID/">
-			<li><a href="/404.html" onclick="this.closest('[data-component=Link]').instance.onClick(event,)" data-component="Link" data-id="/UID/_0">Go error404</a></li>
-			<li><a href="/" onclick="this.closest('[data-component=Link]').instance.onClick(event,)" data-component="Link" data-id="/UID/_1">Go home</a></li>
-			<li><a href="/#jump1" onclick="this.closest('[data-component=Link]').instance.onClick(event,)" data-component="Link" data-id="/UID/_2">Go homeJump1</a></li>
-			<li><a href="/#jump2" onclick="this.closest('[data-component=Link]').instance.onClick(event,)" data-component="Link" data-id="/UID/_3">Go homeJump2</a></li>
-			<li><a href="/ssg/no/" onclick="this.closest('[data-component=Link]').instance.onClick(event,)" data-component="Link" data-id="/UID/_4">Go ssgNo</a></li>
-			<li><a href="/ssg/yes/" onclick="this.closest('[data-component=Link]').instance.onClick(event,)" data-component="Link" data-id="/UID/_5">Go ssgYes</a></li>
-			<li><a href="/ssg/yes/#jump1" onclick="this.closest('[data-component=Link]').instance.onClick(event,)" data-component="Link" data-id="/UID/_6">Go ssgYesJump1</a></li>
-			<li><a href="/ssg/yes/#jump2" onclick="this.closest('[data-component=Link]').instance.onClick(event,)" data-component="Link" data-id="/UID/_7">Go ssgYesJump2</a></li>
+<body data-component="YesSSGPage" data-id="/UID5/">
+	<nav data-component="Nav" data-id="nav">
+		<ul>
+			<li><a href="/404.html" onclick="this.closest('[data-component=Link]').instance.onClick(event,)" data-component="Link" data-id="nav_0">Go error404</a></li>
+			<li><a href="/" onclick="this.closest('[data-component=Link]').instance.onClick(event,)" data-component="Link" data-id="nav_1">Go home</a></li>
+			<li><a href="/#jump1" onclick="this.closest('[data-component=Link]').instance.onClick(event,)" data-component="Link" data-id="nav_2">Go homeJump1</a></li>
+			<li><a href="/#jump2" onclick="this.closest('[data-component=Link]').instance.onClick(event,)" data-component="Link" data-id="nav_3">Go homeJump2</a></li>
+			<li><a href="/ssg/no/" onclick="this.closest('[data-component=Link]').instance.onClick(event,)" data-component="Link" data-id="nav_4">Go ssgNo</a></li>
+			<li><a href="/ssg/yes/" onclick="this.closest('[data-component=Link]').instance.onClick(event,)" data-component="Link" data-id="nav_5">Go ssgYes</a></li>
+			<li><a href="/ssg/yes/#jump1" onclick="this.closest('[data-component=Link]').instance.onClick(event,)" data-component="Link" data-id="nav_6">Go ssgYesJump1</a></li>
+			<li><a href="/ssg/yes/#jump2" onclick="this.closest('[data-component=Link]').instance.onClick(event,)" data-component="Link" data-id="nav_7">Go ssgYesJump2</a></li>
 		</ul>
 	</nav>
 	<main>
-		<div data-component="YesSSGPage" data-id="/UID/">
-			<h1>SSG yes</h1>
-			<div id="jump1">Jump 1</div>
-			<div id="jump2">Jump 2</div>
-		</div><script id="unhydratedArgs" src="data:text/javascript," onload="unhydratedArgs={'/UID/':{title:'SSG yes'},'/UID/_0':{idAttr:'',isExternal:false},'/UID/_1':{idAttr:'',isExternal:false},'/UID/_2':{idAttr:'jump1',isExternal:false},'/UID/_3':{idAttr:'jump2',isExternal:false},'/UID/_4':{idAttr:'',isExternal:false},'/UID/_5':{idAttr:'',isExternal:false},'/UID/_6':{idAttr:'jump1',isExternal:false},'/UID/_7':{idAttr:'jump2',isExternal:false}}"></script>
+		<h1>SSG yes</h1>
+		<div id="jump1">Jump 1</div>
+		<div id="jump2">Jump 2</div>
 	</main>
 </body>
 
