--- a/example/dist-golden/ssg/yes/index.html
+++ b/example/dist-golden/ssg/yes/index.html
@@ -5,24 +5,24 @@
 	<title>SSG yes</title>
 	<base href="/">
 	<meta name="viewport" content="width=device-width, initial-scale=1"> <script src="/script.js" type="module"></script>
-	<link rel="stylesheet" href="/styles.css"> <script id="unhydratedArgs" src="data:text/javascript," onload="unhydratedArgs={'/UID5/':{title:'SSG yes'},nav_0:{idAttr:'',isExternal:false},nav_1:{idAttr:'',isExternal:false},nav_2:{idAttr:'jump1',isExternal:false},nav_3:{idAttr:'jump2',isExternal:false},nav_4:{idAttr:'',isExternal:false},nav_5:{idAttr:'',isExternal:false},nav_6:{idAttr:'jump1',isExternal:false},nav_7:{idAttr:'jump2',isExternal:false}}"></script>
+	<link rel="stylesheet" href="/styles.css"> <script id="unhydratedArgs" src="data:text/javascript," onload="unhydratedArgs={'/UID5/':{title:'SSG yes'}}"></script>
 	<link rel="stylesheet" href="/ssg/yes/index.html.css">
 	<style data-component="YesSSGPage"></style>
 	<style data-component="Nav"></style>
-	<style data-component="Link"></style>
 </head>
 
 <body data-component="YesSSGPage" data-id="/UID5/">
 	<nav data-component="Nav" data-id="nav">
 		<ul>
-			<li><a href="/404.html" onclick="this.closest('[data-component=Link]').instance.onClick(event,)" data-component="Link" data-id="nav_0">Go error404</a></li>
-			<li><a href="/" onclick="this.closest('[data-component=Link]').instance.onClick(event,)" data-component="Link" data-id="nav_1">Go home</a></li>
-			<li><a href="/#jump1" onclick="this.closest('[data-component=Link]').instance.onClick(event,)" data-component="Link" data-id="nav_2">Go homeJump1</a></li>
-			<li><a href="/#jump2" onclick="this.closest('[data-component=Link]').instance.onClick(event,)" data-component="Link" data-id="nav_3">Go homeJump2</a></li>
-			<li><a href="/ssg/no/" onclick="this.closest('[data-component=Link]').instance.onClick(event,)" data-component="Link" data-id="nav_4">Go ssgNo</a></li>
-			<li><a href="/ssg/yes/" onclick="this.closest('[data-component=Link]').instance.onClick(event,)" data-component="Link" data-id="nav_5">Go ssgYes</a></li>
-			<li><a href="/ssg/yes/#jump1" onclick="this.closest('[data-component=Link]').instance.onClick(event,)" data-component="Link" data-id="nav_6">Go ssgYesJump1</a></li>
-			<li><a href="/ssg/yes/#jump2" onclick="this.closest('[data-component=Link]').instance.onClick(event,)" data-component="Link" data-id="nav_7">Go ssgYesJump2</a></li>
+			<li> <a href="/404.html">Go error404</a> </li>
+			<li> <a href="https://example.com/" rel="noopener" target="_blank">Go external</a> </li>
+			<li> <a href="/">Go home</a> </li>
+			<li> <a href="/#jump1">Go homeJump1</a> </li>
+			<li> <a href="/#jump2">Go homeJump2</a> </li>
+			<li> <a href="/ssg/no/">Go ssgNo</a> </li>
+			<li> <a href="/ssg/yes/">Go ssgYes</a> </li>
+			<li> <a href="/ssg/yes/#jump1">Go ssgYesJump1</a> </li>
+			<li> <a href="/ssg/yes/#jump2">Go ssgYesJump2</a> </li>
 		</ul>
 	</nav>
 	<main>
