Add cache busting

--- a/example/dist-golden/404.html
+++ b/example/dist-golden/404.html
@@ -4,8 +4,8 @@
 <head>
 	<title>Error 404</title>
 	<base href="/">
-	<meta name="viewport" content="width=device-width, initial-scale=1"> <script src="/script.js" type="module"></script>
-	<link rel="stylesheet" href="/styles.css"> <script id="unhydratedArgs" src="data:text/javascript," onload="unhydratedArgs={'/UID1/':{title:'Error 404'}}"></script>
+	<meta name="viewport" content="width=device-width, initial-scale=1"> <script src="/script.js?cache=1702333375198" type="module"></script>
+	<link rel="stylesheet" href="/styles.css?cache=1702333375198"> <script id="unhydratedArgs" src="data:text/javascript," onload="unhydratedArgs={'/UID1/':{title:'Error 404'}}"></script>
 	<style data-component="Nav"></style>
 	<style data-component="ErrorPage"></style>
 </head>
