--- a/example/dist-golden/ssg/yes/index.html
+++ b/example/dist-golden/ssg/yes/index.html
@@ -4,9 +4,9 @@
 <head>
 	<title>SSG yes</title>
 	<base href="/">
-	<meta name="viewport" content="width=device-width, initial-scale=1"> <script src="/script.js" type="module"></script>
-	<link rel="stylesheet" href="/styles.css"> <script id="unhydratedArgs" src="data:text/javascript," onload="unhydratedArgs={'/UID5/':{title:'SSG yes'}}"></script>
-	<link rel="stylesheet" href="/ssg/yes/index.html.css">
+	<meta name="viewport" content="width=device-width, initial-scale=1"> <script src="/script.js?cache=1702333375198" type="module"></script>
+	<link rel="stylesheet" href="/styles.css?cache=1702333375198"> <script id="unhydratedArgs" src="data:text/javascript," onload="unhydratedArgs={'/UID5/':{title:'SSG yes'}}"></script>
+	<link rel="stylesheet" href="/ssg/yes/index.html.css?cache=1702333375198">
 	<style data-component="YesSSGPage"></style>
 	<style data-component="Nav"></style>
 </head>
