Update components based on emitter update

--- a/example/dist-golden/index.html
+++ b/example/dist-golden/index.html
@@ -4,9 +4,9 @@
 <head>
 	<title>Home page</title>
 	<base href="/">
-	<meta name="viewport" content="width=device-width, initial-scale=1"> <script src="/script.js?cache=1702333375198" type="module"></script>
-	<link rel="stylesheet" href="/styles.css?cache=1702333375198"> <script id="unhydratedArgs" src="data:text/javascript," onload="unhydratedArgs={'/UID3/':{message:'This is a variable',title:'Home page'},mylist:[{value:'hello'}],'mylist-0':'hello','mylist-0_0':{value:'hello'}}"></script>
-	<link rel="stylesheet" href="/index.html.css?cache=1702333375198">
+	<meta name="viewport" content="width=device-width, initial-scale=1"> <script src="/script.js?cache=1702481854957" type="module"></script>
+	<link rel="stylesheet" href="/styles.css?cache=1702481854957"> <script id="unhydratedArgs" src="data:text/javascript," onload="unhydratedArgs={'/UID3/':{message:'This is a variable',title:'Home page'},mylist:[{value:'hello'}],'mylist-0':'hello','mylist-0_0':{maxlength:10,value:'hello'}}"></script>
+	<link rel="stylesheet" href="/index.html.css?cache=1702481854957">
 	<style data-component="Textbox"></style>
 	<style data-component="ListItem"></style>
 	<style data-component="List"></style>
