Added removed and rendered actions

--- a/example/dist-golden/index.html
+++ b/example/dist-golden/index.html
@@ -4,12 +4,13 @@
 <head>
 	<title>Home page</title>
 	<base href="/">
-	<meta name="viewport" content="width=device-width, initial-scale=1"> <script src="/script.js?cache=1702481854957" type="module"></script>
-	<link rel="stylesheet" href="/styles.css?cache=1702481854957"> <script id="unhydratedArgs" src="data:text/javascript," onload="unhydratedArgs={'/UID3/':{message:'This is a variable',title:'Home page'},mylist:[{value:'hello'}],'mylist-0':'hello','mylist-0_0':{maxlength:10,value:'hello'}}"></script>
-	<link rel="stylesheet" href="/index.html.css?cache=1702481854957">
+	<meta name="viewport" content="width=device-width, initial-scale=1"> <script src="/script.js?cache=1702534846726" type="module"></script>
+	<link rel="stylesheet" href="/styles.css?cache=1702534846726"> <script id="unhydratedArgs" src="data:text/javascript," onload="unhydratedArgs={'/UID3/':{message:'This is a variable',title:'Home page'},mylist:[{value:'hello'}],'mylist-0':'hello','mylist-0_0':{maxlength:10,value:'hello'}}"></script>
+	<link rel="stylesheet" href="/index.html.css?cache=1702534846726">
 	<style data-component="Textbox"></style>
 	<style data-component="ListItem"></style>
 	<style data-component="List"></style>
+	<style data-component="TransitionTest"></style>
 	<style data-component="IndexPage"></style>
 	<style data-component="Nav"></style>
 </head>
@@ -30,6 +31,7 @@
 	</nav>
 	<main>
 		<h1>Hello world!</h1>
+		<div data-component="TransitionTest" data-id="/UID3/_0"></div>
 		<div id="jump1">Jump 1</div>
 		<ol data-component="List" data-id="mylist">
 			<li>
