--- a/example/dist-golden/ssg/yes/index.html
+++ b/example/dist-golden/ssg/yes/index.html
@@ -4,14 +4,14 @@
 <head>
 	<title>SSG yes</title>
 	<base href="/">
-	<meta name="viewport" content="width=device-width, initial-scale=1"> <script src="/script.js?cache=1702534846726" type="module"></script>
-	<link rel="stylesheet" href="/styles.css?cache=1702534846726"> <script id="unhydratedArgs" src="data:text/javascript," onload="unhydratedArgs={'/UID5/':{title:'SSG yes'}}"></script>
-	<link rel="stylesheet" href="/ssg/yes/index.html.css?cache=1702534846726">
+	<meta name="viewport" content="width=device-width, initial-scale=1"> <script src="/script.js?cache=1702577295032" type="module"></script>
+	<link rel="stylesheet" href="/styles.css?cache=1702577295032"> <script id="unhydratedArgs" src="data:text/javascript," onload="unhydratedArgs={'/UID6/':{title:'SSG yes'}}"></script>
+	<link rel="stylesheet" href="/ssg/yes/index.html.css?cache=1702577295032">
 	<style data-component="YesSSGPage"></style>
 	<style data-component="Nav"></style>
 </head>
 
-<body data-component="YesSSGPage" data-id="/UID5/">
+<body data-component="YesSSGPage" data-id="/UID6/">
 	<nav data-component="Nav" data-id="nav">
 		<ul>
 			<li> <a href="/404.html">Go error404</a> </li>
@@ -23,6 +23,7 @@
 			<li> <a href="/ssg/yes/">Go ssgYes</a> </li>
 			<li> <a href="/ssg/yes/#jump1">Go ssgYesJump1</a> </li>
 			<li> <a href="/ssg/yes/#jump2">Go ssgYesJump2</a> </li>
+			<li> <button onclick="this.closest(`[data-component='Nav']`).instance.openModal(event,)" type="button">Modal</button> </li>
 		</ul>
 	</nav>
 	<main>
