--- a/example/dist-golden/index.html
+++ b/example/dist-golden/index.html
@@ -4,9 +4,9 @@
 <head>
 	<title>Home page</title>
 	<base href="/">
-	<meta name="viewport" content="width=device-width, initial-scale=1"> <script src="/script.js?cache=1702534846726" type="module"></script>
-	<link rel="stylesheet" href="/styles.css?cache=1702534846726"> <script id="unhydratedArgs" src="data:text/javascript," onload="unhydratedArgs={'/UID3/':{message:'This is a variable',title:'Home page'},mylist:[{value:'hello'}],'mylist-0':'hello','mylist-0_0':{maxlength:10,value:'hello'}}"></script>
-	<link rel="stylesheet" href="/index.html.css?cache=1702534846726">
+	<meta name="viewport" content="width=device-width, initial-scale=1"> <script src="/script.js?cache=1702577295032" type="module"></script>
+	<link rel="stylesheet" href="/styles.css?cache=1702577295032"> <script id="unhydratedArgs" src="data:text/javascript," onload="unhydratedArgs={'/UID4/':{message:'This is a variable',title:'Home page'},mylist:[{value:'hello'}],'mylist-0':'hello','mylist-0_0':{maxlength:10,value:'hello'}}"></script>
+	<link rel="stylesheet" href="/index.html.css?cache=1702577295032">
 	<style data-component="Textbox"></style>
 	<style data-component="ListItem"></style>
 	<style data-component="List"></style>
@@ -15,7 +15,7 @@
 	<style data-component="Nav"></style>
 </head>
 
-<body data-component="IndexPage" data-id="/UID3/">
+<body data-component="IndexPage" data-id="/UID4/">
 	<nav data-component="Nav" data-id="nav">
 		<ul>
 			<li> <a href="/404.html">Go error404</a> </li>
@@ -27,11 +27,12 @@
 			<li> <a href="/ssg/yes/">Go ssgYes</a> </li>
 			<li> <a href="/ssg/yes/#jump1">Go ssgYesJump1</a> </li>
 			<li> <a href="/ssg/yes/#jump2">Go ssgYesJump2</a> </li>
+			<li> <button onclick="this.closest(`[data-component='Nav']`).instance.openModal(event,)" type="button">Modal</button> </li>
 		</ul>
 	</nav>
 	<main>
 		<h1>Hello world!</h1>
-		<div data-component="TransitionTest" data-id="/UID3/_0"></div>
+		<div data-component="TransitionTest" data-id="/UID4/_0"></div>
 		<div id="jump1">Jump 1</div>
 		<ol data-component="List" data-id="mylist">
 			<li>
